<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/tvAmtDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|end"
            android:text="@string/string_rand_initial_value" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="4">
            <Button
                android:id="@+id/btnOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:onClick="onClickHandle"
                android:text="@string/one"
                android:textColor="@color/primaryText" />

            <Button
                android:id="@+id/btnTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:onClick="onClickHandle"
                android:text="@string/two"
                android:textColor="@color/primaryText" />

            <Button
                android:id="@+id/btnThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:onClick="onClickHandle"
                android:text="@string/three"
                android:textColor="@color/primaryText" />
            <Button
                android:id="@+id/btnFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:onClick="onClickHandle"
                android:text="@string/four"
                android:textColor="@color/primaryText" />

            <Button
                android:id="@+id/btnFive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:onClick="onClickHandle"
                android:text="@string/five"
                android:textColor="@color/primaryText" />

            <Button
                android:id="@+id/btnSix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:onClick="onClickHandle"
                android:text="@string/six"
                android:textColor="@color/primaryText" />

            <Button
                android:id="@+id/btnSeven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:onClick="onClickHandle"
                android:text="@string/seven"
                android:textColor="@color/primaryText" />

            <Button
                android:id="@+id/btnEight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:onClick="onClickHandle"
                android:text="@string/eight"
                android:textColor="@color/primaryText" />

            <Button
                android:id="@+id/btnNine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:onClick="onClickHandle"
                android:text="@string/nine"
                android:textColor="@color/primaryText" />

            <Button
                android:id="@+id/btnDel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:onClick="onDelete"
                android:text="@string/delete"
                android:textColor="@color/primaryText" />

            <Button
                android:id="@+id/btnZero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:onClick="onClickHandle"
                android:text="@string/zero"
                android:textColor="@color/primaryText" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:onClick="onAddClick"
                android:text="@string/add"
                android:textColor="@color/primaryText" />
        </GridLayout>

        <TextView
            android:id="@+id/tvResultDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/secondaryBackground"
            android:gravity="center_vertical|end"
            android:text="@string/string_rand_initial_value"
            android:textColor="@color/white" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>